--- a/index.html
+++ b/index.html
@@ -1,63 +1,64 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="favicon.ico">
-<title>嘉豐非營利幼兒園-家長接送登記</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/zzsc.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
-<script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-<script src="js/sweetalert.min.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico">
+    <title>嘉豐非營利幼兒園-家長接送登記</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/zzsc.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/sweetalert.css">
+    <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <script src="js/sweetalert.min.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="demo form-bg">
-	
-</div>
+    <div class="demo form-bg">
 
-<script>
-     var strUrl = location.search;
-            var YourLocation;
-            if (strUrl.indexOf("?") != -1) {
-			    YourNo = decodeURI(strUrl.split("?")[1].split("&")[0].split("=")[1]);
-                YourClass = decodeURI(strUrl.split("?")[1].split("&")[1].split("=")[1]);
-				YourSerialNumber = decodeURI(strUrl.split("?")[1].split("&")[2].split("=")[1]);
-				send(YourNo,YourClass,YourSerialNumber);	
-			}else{
-			swal("掃描失敗", "請再重新掃描QRCODE!!", "error");
-			}
-function send(no, cls, sn) {
-  
-    $.ajax({
-	url:"https://script.google.com/macros/s/AKfycbyXVsjvgqMkHGRUKmzw7xq7VkAAaWT3DXQ45vpbAyUcKi_WM18/exec",
-    data: {
-        "emplyid": no,
-        "location": sn,
-		"locationNM": cls
-    },
-    success: function(response) {
-      if(response == "成功"){
-	  const d = new Date();
-		swal(sn, d.getHours()+':'+d.getMinutes()+"  下課", "success");
-      }
-    },
-  });
+    </div>
 
- 
-};
+    <script>
+        var strUrl = location.search;
+        var YourLocation;
+        if (strUrl.indexOf("?") != -1) {
+            YourNo = decodeURI(strUrl.split("?")[1].split("&")[0].split("=")[1]);
+            YourClass = decodeURI(strUrl.split("?")[1].split("&")[1].split("=")[1]);
+            YourSerialNumber = decodeURI(strUrl.split("?")[1].split("&")[2].split("=")[1]);
+            send(YourNo, YourClass, YourSerialNumber);
+        } else {
+            swal("掃描失敗", "請再重新掃描QRCODE!!", "error");
+        }
+        function send(no, cls, sn) {
 
-function padLeft(str,lenght){
-if(str.length >= lenght)
-return str;
-else
-return padLeft("0" +str,lenght);
-}
+            $.ajax({
+                url: "https://script.google.com/macros/s/AKfycbyXVsjvgqMkHGRUKmzw7xq7VkAAaWT3DXQ45vpbAyUcKi_WM18/exec",
+                data: {
+                    "method ": "write",
+                    "emplyid": no,
+                    "location": sn,
+                    "locationNM": cls
+                },
+                success: function (response) {
+                    if (response == "成功") {
+                        const d = new Date();
+                        swal(sn, d.getHours() + ':' + d.getMinutes() + "  下課", "success");
+                    }
+                },
+            });
 
-</script>
+
+        };
+
+        function padLeft(str, lenght) {
+            if (str.length >= lenght)
+                return str;
+            else
+                return padLeft("0" + str, lenght);
+        }
+
+    </script>
 </body>
 </html>
